# reorg-playground

./: .dockerignore  .gitignore  Caddyfile  Caddyfile.prod  Cargo.toml  Dockerfile.backend  Dockerfile.web  LICENSE  README.md  biome.json  config.docker.toml  config.production.toml  config.test-env.toml  config.toml.example  docker-compose-production.yml  docker-compose.test-env.yml  docker-compose.yml
.zed/: settings.json
scripts/: run-signet-miner.sh  setup-signet-test-env.sh  start-regtest-pair.sh  start-signet-nodes.sh  start-signet-pair.sh  stop-regtest-pair.sh  stop-signet-nodes.sh
src/: api.rs  cache.rs  config.rs  db.rs  error.rs  headertree.rs  jsonrpc.rs  main.rs  metrics.rs  node.rs  peer_api.rs  rss.rs  types.rs
src/node/: bitcoin_core.rs  btcd.rs  electrum.rs  esplora.rs  mod.rs  shared_fetch.rs  signet_mining.rs  types.rs
ui/: README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: ActiveNodeCard.tsx  ActiveTipToolbarButton.tsx  App.tsx  AppHeader.tsx  BlockDetailPanel.tsx  BlockGraph.tsx  BlockNode.tsx  BlockTreeNode.tsx  ConnectionStatus.tsx  FaucetButton.tsx  FoldedBlockTreeNode.tsx  GraphToolbar.tsx  Legend.tsx  Metrics.tsx  MineBlockButton.tsx  MineBlockNode.tsx  MineTreeNode.tsx  NetworkSelector.tsx  NodeInfoPanel.tsx  NodeSection.tsx  PeerConnectionManager.tsx  ThemeToggle.tsx  TriggerReorgButton.tsx  api.ts  hooks.ts  index.css  tree.ts  types.ts  utils.ts
ui/src/hooks/: useFaucet.ts  useMineBlock.ts  useNetworkData.ts  useNetworks.ts  useNodeP2PConnection.ts  useNotification.ts  usePeerConnectionManager.ts  useTheme.ts  useTriggerReorg.ts
ui/src/services/: cacheChangeEventService.ts  faucetService.ts  miningService.ts  (+6 more)
(+12 files in other folders)
